--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id="wrapper" class="resultsWindow">
+            <div id="scoreWindow">
+                <p id="playerScore">Player: 0</p>
+                <p id="computerScore">Computer: 0</p>
+            </div>
+            <div id="buttons">
+                <button data-choice="rock" class="btn">Rock</button>
+                <button data-choice="paper" class="btn">Paper</button>
+                <button data-choice="scissors" class="btn">Scissors</button>
+                <!-- <button id="clear">Clear</button> -->
+            </div>
 
+                <textarea id="textArea">
+                    
+                </textarea>
+        </div>
         <script src="script.js"></script>
     </body>
 </html>
